-- =====================================================================
-- Целевая аналитическая модель закупок. PostgreSQL. Первый релиз.
-- Сокращённый DDL: показана физическая структура, а не production-обвязка
-- (партиционирование, права, аудит-поля загрузки опущены).
-- =====================================================================

CREATE EXTENSION IF NOT EXISTS btree_gist;   -- нужен для EXCLUDE в dim_supplier

CREATE SCHEMA IF NOT EXISTS ods;    -- нормализованный слой: версии, историчность
CREATE SCHEMA IF NOT EXISTS dds;    -- целевая аналитическая модель (звезда)
CREATE SCHEMA IF NOT EXISTS mart;   -- витрины под конкретные вопросы
CREATE SCHEMA IF NOT EXISTS dq;     -- метрики качества данных

-- ---------------------------------------------------------------------
-- ODS. История версий строк заказа.
-- Полные дубли строк (1 591 из 55 644) схлопываются на загрузке, их число
-- пишется в dq.run_metric — это и есть предусмотренный механизм обработки,
-- позволяющий держать здесь честный первичный ключ.
-- ---------------------------------------------------------------------
CREATE TABLE ods.po_line_version (
    order_id              text          NOT NULL,
    line_no               smallint      NOT NULL,
    updated_at            timestamptz   NOT NULL,   -- зона MSK объявляется при загрузке
    item_id_src           text          NOT NULL,
    qty                   numeric(18,3) NOT NULL,
    price                 numeric(18,4) NOT NULL,
    plan_price            numeric(18,4),
    uom_code_src          text          NOT NULL,
    planned_delivery_date date          NOT NULL,
    status_src            text          NOT NULL,
    is_current_version    boolean       NOT NULL,
    src_dup_cnt           smallint      NOT NULL DEFAULT 1,  -- сколько раз строка пришла из источника
    load_id               bigint        NOT NULL,
    CONSTRAINT pk_po_line_version PRIMARY KEY (order_id, line_no, updated_at),
    CONSTRAINT ck_po_line_status  CHECK (status_src IN ('active','cancelled')),
    CONSTRAINT ck_po_line_qty     CHECK (qty > 0 AND price >= 0)
);

-- Структурная защита от дефекта 1: у строки заказа ровно одна действующая версия
CREATE UNIQUE INDEX uq_po_line_current
    ON ods.po_line_version (order_id, line_no) WHERE is_current_version;

CREATE INDEX ix_po_line_version_key ON ods.po_line_version (order_id, line_no);

-- ---------------------------------------------------------------------
-- Справочник курсов. Полный календарь: выходные (272 даты) заполняются
-- протяжкой последнего known-курса с явным признаком происхождения.
-- Строка RUB = 1.0 хранится, чтобы ETL и витрины не содержали CASE по валюте.
-- ---------------------------------------------------------------------
CREATE TABLE dds.ref_fx_rate_daily (
    rate_date     date          NOT NULL,
    currency_code char(3)       NOT NULL,
    rate_to_rub   numeric(18,6) NOT NULL,
    rate_source   text          NOT NULL,
    CONSTRAINT pk_fx_rate    PRIMARY KEY (rate_date, currency_code),
    CONSTRAINT ck_fx_rate    CHECK (rate_to_rub > 0),
    CONSTRAINT ck_fx_source  CHECK (rate_source IN ('actual','carried_forward'))
);

-- ---------------------------------------------------------------------
-- Измерения
-- ---------------------------------------------------------------------
CREATE TABLE dds.dim_date (
    date_key         int     PRIMARY KEY,          -- YYYYMMDD
    date_actual      date    NOT NULL UNIQUE,
    year_month_key   int     NOT NULL,             -- YYYYMM
    year_quarter_key int     NOT NULL,             -- YYYYQ
    quarter_no       smallint NOT NULL,
    month_no         smallint NOT NULL,
    is_weekend       boolean NOT NULL
);

-- Золотая запись поставщика (MDM). UNIQUE(inn) сознательно НЕ ставится:
-- один ИНН может законно обслуживать несколько учётных записей, и до ручного
-- подтверждения каждая запись источника получает собственную золотую запись.
CREATE TABLE dds.dim_supplier_golden (
    golden_supplier_id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    inn                varchar(12) NOT NULL,
    golden_name        text        NOT NULL,
    region             text,
    reliability_class  char(1),
    is_merge_confirmed boolean     NOT NULL DEFAULT false,
    has_attr_conflict  boolean     NOT NULL DEFAULT false,  -- класс A и C у одного ИНН
    confirmed_by       text,
    confirmed_at       timestamptz,
    CONSTRAINT ck_golden_inn CHECK (inn ~ '^[0-9]{10}$' OR inn ~ '^[0-9]{12}$')
);
CREATE INDEX ix_golden_inn ON dds.dim_supplier_golden (inn);

-- SCD2 по версиям источника. valid_from самой ранней версии расширяется
-- до 1900-01-01, иначе 230 заказов остаются без действующей версии поставщика.
CREATE TABLE dds.dim_supplier (
    supplier_key       bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    supplier_id        text        NOT NULL,
    golden_supplier_id bigint      NOT NULL REFERENCES dds.dim_supplier_golden,
    supplier_name      text        NOT NULL,
    supplier_name_norm text        NOT NULL,   -- TRIM + схлопывание пробелов + регистр
    inn                varchar(12) NOT NULL,
    region             text,
    reliability_class  char(1),
    valid_from         date        NOT NULL,
    valid_to           date        NOT NULL DEFAULT DATE '9999-12-31',
    is_current         boolean     NOT NULL,
    CONSTRAINT uq_supplier_version UNIQUE (supplier_id, valid_from),
    CONSTRAINT ck_supplier_period  CHECK (valid_from <= valid_to),
    -- периоды историчности одного поставщика не пересекаются (на данных нарушений нет)
    CONSTRAINT ex_supplier_overlap EXCLUDE USING gist (
        supplier_id WITH =, daterange(valid_from, valid_to, '[]') WITH &&)
);
-- не более одной актуальной версии на поставщика
CREATE UNIQUE INDEX uq_supplier_current
    ON dds.dim_supplier (supplier_id) WHERE is_current;
CREATE INDEX ix_supplier_golden ON dds.dim_supplier (golden_supplier_id);

-- Номенклатура. 40 позиций, отсутствующих в справочнике, грузятся как
-- late-arriving stub (is_unknown = true) и обогащаются на месте после догрузки
-- справочника — без перезагрузки фактов.
CREATE TABLE dds.dim_item (
    item_key              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    item_id               text    NOT NULL,
    item_name             text,
    category_master       text    NOT NULL DEFAULT 'Не определена',
    category_reported     text,
    has_category_conflict boolean NOT NULL DEFAULT false,   -- 33 позиции
    ref_uom_code          text,                             -- единица из справочника
    is_unknown            boolean NOT NULL DEFAULT false,
    has_uom_conflict      boolean NOT NULL DEFAULT false,   -- закупки в разных базовых единицах
    CONSTRAINT uq_item UNIQUE (item_id)
);
CREATE INDEX ix_item_category ON dds.dim_item (category_master);

CREATE TABLE dds.dim_uom (
    uom_key        int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    uom_code       text          NOT NULL,
    uom_name       text,
    base_uom_code  text          NOT NULL,   -- PCS / KG / M
    factor_to_base numeric(18,6) NOT NULL,
    CONSTRAINT uq_uom       UNIQUE (uom_code),
    CONSTRAINT ck_uom_factor CHECK (factor_to_base > 0)
);

-- Unknown-члены измерений (ключ -1). IDENTITY объявлен BY DEFAULT именно
-- для того, чтобы эти строки можно было вставить с явным ключом.
INSERT INTO dds.dim_supplier_golden (golden_supplier_id, inn, golden_name)
VALUES (-1, '0000000000', 'Не определён');
INSERT INTO dds.dim_supplier (supplier_key, supplier_id, golden_supplier_id, supplier_name,
                              supplier_name_norm, inn, valid_from, valid_to, is_current)
VALUES (-1, '#UNKNOWN', -1, 'Не определён', 'не определён', '0000000000',
        DATE '1900-01-01', DATE '9999-12-31', true);
INSERT INTO dds.dim_item (item_key, item_id, item_name, is_unknown)
VALUES (-1, '#UNKNOWN', 'Не определена', true);
INSERT INTO dds.dim_uom (uom_key, uom_code, uom_name, base_uom_code, factor_to_base)
VALUES (-1, '#UNKNOWN', 'Не определена', '#UNKNOWN', 1.0);

-- ---------------------------------------------------------------------
-- Фактовая таблица первого релиза.
-- Зерно: одна действующая версия строки заказа поставщику.
-- ---------------------------------------------------------------------
CREATE TABLE dds.fact_po_line (
    po_line_key               bigint GENERATED ALWAYS AS IDENTITY PRIMARY KEY,

    -- бизнес-ключ и drill-down до первичного документа
    order_id                  text     NOT NULL,
    line_no                   smallint NOT NULL,

    -- измерения
    supplier_key              bigint   NOT NULL REFERENCES dds.dim_supplier,
    item_key                  bigint   NOT NULL REFERENCES dds.dim_item,
    uom_key                   int      NOT NULL REFERENCES dds.dim_uom,
    order_date_key            int      NOT NULL REFERENCES dds.dim_date,
    planned_delivery_date_key int      NOT NULL REFERENCES dds.dim_date,

    -- вырожденные атрибуты заказа (отдельная сущность «заказ» в scope не нужна)
    order_dttm_msk            timestamptz NOT NULL,
    order_type                text     NOT NULL,
    delivery_city             text,
    item_id_src               text     NOT NULL,   -- исходный код позиции сохраняется всегда

    -- меры в валюте документа
    currency_code             char(3)       NOT NULL,
    qty                       numeric(18,3) NOT NULL,
    price                     numeric(18,4) NOT NULL,
    plan_price                numeric(18,4),
    amount_doc                numeric(20,4) GENERATED ALWAYS AS (qty * price) STORED,

    -- нормализация валюты: курс фиксируется в строке факта
    fx_rate                   numeric(18,6) NOT NULL,
    fx_rate_date              date          NOT NULL,
    fx_rate_source            text          NOT NULL,
    amount_rub                numeric(20,4) NOT NULL,

    -- нормализация единиц измерения
    base_uom_code             text          NOT NULL,
    qty_base                  numeric(20,4) NOT NULL,
    -- вычисляемое поле: цена за базовую единицу не может разойтись с суммой и количеством
    price_per_base_uom_rub    numeric(20,6) GENERATED ALWAYS AS (amount_rub / qty_base) STORED,

    -- состояние строки
    is_cancelled              boolean     NOT NULL,
    version_updated_at        timestamptz NOT NULL,
    version_cnt               smallint    NOT NULL,   -- сколько версий было у строки

    -- флаги качества данных, влияющие на допустимость строки в метриках
    is_item_unresolved        boolean NOT NULL DEFAULT false,
    is_price_scale_suspect    boolean NOT NULL DEFAULT false,
    load_id                   bigint  NOT NULL,

    CONSTRAINT uq_fact_po_line UNIQUE (order_id, line_no),   -- защита от двойного учёта
    CONSTRAINT ck_fact_qty      CHECK (qty > 0),
    CONSTRAINT ck_fact_price    CHECK (price >= 0),
    CONSTRAINT ck_fact_qty_base CHECK (qty_base > 0),
    CONSTRAINT ck_fact_fx       CHECK (fx_rate > 0),
    CONSTRAINT ck_fact_fx_src   CHECK (fx_rate_source IN ('actual','carried_forward'))
);

CREATE INDEX ix_fact_supplier   ON dds.fact_po_line (supplier_key);
CREATE INDEX ix_fact_item_base  ON dds.fact_po_line (item_key, base_uom_code);
CREATE INDEX ix_fact_order_date ON dds.fact_po_line (order_date_key);
CREATE INDEX ix_fact_plan_date  ON dds.fact_po_line (planned_delivery_date_key);
CREATE INDEX ix_fact_active     ON dds.fact_po_line (order_date_key, item_key)
    WHERE NOT is_cancelled;

-- ---------------------------------------------------------------------
-- Метрики качества данных: без них «доверие к цифрам» не проверяемо
-- ---------------------------------------------------------------------
CREATE TABLE dq.run_metric (
    load_id      bigint        NOT NULL,
    run_at       timestamptz   NOT NULL DEFAULT now(),
    layer        text          NOT NULL,
    metric_code  text          NOT NULL,   -- dup_line_key_pct, unknown_item_amount_pct, ...
    metric_value numeric(20,6) NOT NULL,
    threshold    numeric(20,6),
    severity     text          NOT NULL,
    CONSTRAINT pk_dq_run_metric PRIMARY KEY (load_id, layer, metric_code),
    CONSTRAINT ck_dq_severity   CHECK (severity IN ('info','warn','block'))
);

-- ---------------------------------------------------------------------
-- Витрины
-- ---------------------------------------------------------------------

-- Оборот: месяц x золотой поставщик x категория
CREATE MATERIALIZED VIEW mart.spend_monthly AS
SELECT d.year_month_key,
       s.golden_supplier_id,
       i.category_master,
       SUM(f.amount_rub)  FILTER (WHERE NOT f.is_cancelled)                        AS amount_rub_active,
       SUM(f.amount_rub)  FILTER (WHERE f.is_cancelled)                            AS amount_rub_cancelled,
       SUM(f.amount_rub)  FILTER (WHERE NOT f.is_cancelled AND f.is_item_unresolved) AS amount_rub_item_unresolved,
       SUM(f.amount_rub)  FILTER (WHERE NOT f.is_cancelled AND f.fx_rate_source = 'carried_forward') AS amount_rub_fx_carried,
       COUNT(*)           FILTER (WHERE NOT f.is_cancelled)                        AS lines_active,
       COUNT(*)           FILTER (WHERE f.is_cancelled)                            AS lines_cancelled,
       COUNT(DISTINCT f.order_id) FILTER (WHERE NOT f.is_cancelled)                AS orders_with_lines
FROM dds.fact_po_line f
JOIN dds.dim_supplier s ON s.supplier_key = f.supplier_key
JOIN dds.dim_item     i ON i.item_key     = f.item_key
JOIN dds.dim_date     d ON d.date_key     = f.order_date_key
GROUP BY 1, 2, 3;

CREATE UNIQUE INDEX uq_spend_monthly
    ON mart.spend_monthly (year_month_key, golden_supplier_id, category_master);

-- Сравнение цен: базовая единица входит в зерно, поэтому кг никогда
-- не сравнивается со штуками. Юаневые строки исключены (дефект масштаба цен).
CREATE MATERIALIZED VIEW mart.price_benchmark AS
WITH base AS (
    SELECT d.year_month_key,
           f.item_key,
           f.base_uom_code,
           s.golden_supplier_id,
           SUM(f.qty_base)   AS qty_base,
           SUM(f.amount_rub) AS amount_rub
    FROM dds.fact_po_line f
    JOIN dds.dim_supplier s ON s.supplier_key = f.supplier_key
    JOIN dds.dim_date     d ON d.date_key     = f.order_date_key
    WHERE NOT f.is_cancelled
      AND NOT f.is_price_scale_suspect
    GROUP BY 1, 2, 3, 4
)
SELECT b.year_month_key,
       b.item_key,
       b.base_uom_code,
       b.golden_supplier_id,
       b.qty_base,
       b.amount_rub,
       b.amount_rub / b.qty_base                                          AS price_per_base_uom,
       MIN(b.amount_rub / b.qty_base) OVER w                              AS min_price_in_group,
       COUNT(*) OVER w                                                    AS suppliers_in_group,
       b.amount_rub - b.qty_base * MIN(b.amount_rub / b.qty_base) OVER w  AS overpay_rub
FROM base b
WINDOW w AS (PARTITION BY b.year_month_key, b.item_key, b.base_uom_code);

CREATE UNIQUE INDEX uq_price_benchmark
    ON mart.price_benchmark (year_month_key, item_key, base_uom_code, golden_supplier_id);

-- Динамика цены по кварталам: ответ на вопрос «где выросло за квартал»
CREATE MATERIALIZED VIEW mart.price_dynamics_quarter AS
WITH q AS (
    SELECT d.year_quarter_key,
           f.item_key,
           f.base_uom_code,
           SUM(f.qty_base)   AS qty_base,
           SUM(f.amount_rub) AS amount_rub
    FROM dds.fact_po_line f
    JOIN dds.dim_date d ON d.date_key = f.order_date_key
    WHERE NOT f.is_cancelled
      AND NOT f.is_price_scale_suspect
    GROUP BY 1, 2, 3
)
SELECT q.year_quarter_key,
       q.item_key,
       q.base_uom_code,
       q.qty_base,
       q.amount_rub,
       q.amount_rub / q.qty_base AS price_per_base_uom,
       LAG(q.amount_rub / q.qty_base) OVER w AS price_prev_quarter,
       (q.amount_rub / q.qty_base) / NULLIF(LAG(q.amount_rub / q.qty_base) OVER w, 0) - 1 AS price_change_pct,
       ((q.amount_rub / q.qty_base) - LAG(q.amount_rub / q.qty_base) OVER w) * q.qty_base AS price_change_impact_rub
FROM q
WINDOW w AS (PARTITION BY q.item_key, q.base_uom_code ORDER BY q.year_quarter_key);

CREATE UNIQUE INDEX uq_price_dynamics_quarter
    ON mart.price_dynamics_quarter (year_quarter_key, item_key, base_uom_code);
